# DCT-Protocol

./: .gitignore  .gitmodules  README.md  context.md  docker-compose.tlsn.yml  package-lock.json
.github/workflows/: client-server.yml  contracts.yml
client/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/public/: lib.d.ts  lib.d.ts.map  lib.js  lib.js.map  spawn.js  tlsn_wasm.js  transcript.d.ts  transcript.d.ts.map  types.d.ts  types.d.ts.map  utils.d.ts  utils.d.ts.map
client/src/: App.jsx  addresses.base-sepolia.json  addresses.json  addresses.local-anvil.json  index.css
contracts/: .gitignore  DELEGATION_FRAMEWORK.md  README.md  deployment.json  foundry.toml  package-lock.json  package.json  remappings.txt
contracts/abi/: IdentityRegistry.min.json
contracts/script/: Deploy.s.sol  DeployDCT.s.sol  DeployDCTCaveat.s.sol  UpgradeDCTEnforcer.s.sol  UpgradeNotaryVerifier.s.sol
contracts/scripts/: deploy-base-sepolia.sh  deploy.js  export-abis.mjs  sync-addresses-from-broadcast.mjs  upgrade-dct-enforcer-base-sepolia.sh
contracts/src/: DCTEnforcer.sol  DCTRegistry.sol  NotaryAttestationVerifier.sol
contracts/test/: DCTRegistry.t.sol
docker/tlsn/: notary-config.yaml
docker/tlsn/prover-api/: Cargo.toml  Dockerfile
docker/tlsn/prover-api/src/: main.rs
docs/: LOCAL_DEV.md
pythonNodes/: dct_integration.py  phase1.py  trustScores.py
scripts/: demo-onchain.sh
server/: .env.example  addresses.base-sepolia.json  load-env.mjs  package-lock.json  package.json  server.js
server/abi/: DCTEnforcer.json  (+3 more)
(+60 files in other folders)
