[package]
name    = "dct-tlsn-prover-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prover-api"
path = "src/main.rs"

[dependencies]
# HTTP server
axum            = { version = "0.7", features = ["json"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.5", features = ["cors"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLSNotary prover
tlsn-prover     = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }
tlsn-core       = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.12" }

# Networking
tokio-util      = { version = "0.7", features = ["compat"] }
hyper           = { version = "1",   features = ["client", "http1"] }
hyper-util      = { version = "0.1", features = ["tokio"] }

# Crypto
hex             = "0.4"
sha2            = "0.10"

[profile.release]
opt-level = 3
